fixed overlapping footer

--- a/wp-content/themes/synergy-dev/assets/scss/organisms/_footer.scss
+++ b/wp-content/themes/synergy-dev/assets/scss/organisms/_footer.scss
@@ -11,6 +11,7 @@ Footer Component
   padding-bottom: $d-base;
   padding-top: $d-sex;
   background-color: $ca-footer-background;
+  margin-top: $d-dec;
 
   &:before {
     content: '';
